updated version of opencv 4.5.5

--- a/Project3.ipynb
+++ b/Project3.ipynb
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "98f7dbb4",
    "metadata": {},
    "outputs": [
@@ -94,7 +94,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1437\n"
+      "283\n"
      ]
     },
     {
@@ -115,7 +115,7 @@
     "good = []\n",
     "\n",
     "for m,n in matches:\n",
-    "    if m.distance < n.distance:\n",
+    "    if m.distance < 0.5*n.distance:\n",
     "        good.append(m)\n",
     "\n",
     "draw_params = dict(matchColor=(0,255,0),\n",
